# cpplox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/: interpreter.h  utils.h  utils.hpp
include/lexer/: scanner.h  token.h
src/: interpreter.cpp  main.cpp  utils.cpp
src/lexer/: scanner.cpp
tests/: parser_test.cpp
tests/source/: literals.lox  literals.lox.expected  parentheses.lox.expected
